# EventAggregator

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_V2.md  BENCHMARK_GUIDE.md  BUILD_GUIDE.md  CMakeLists.txt  INTERVIEW_PITCH.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SYSTEM_DIAGRAMS.md  build.sh  cursor_automating_10_k_pdf_conversion_dec10.md
benchmarks/: benchmark_suite.cpp
examples/: dashboard.html  ingest_demo.cpp  multi_gpu_demo.cpp  query_demo.cpp
include/: columnar_layout.h  event_aggregator.h  gpu_telemetry.h  nsight_profiler.h  rest_api.h  simd_query_engine.h  tiered_storage.h
src/: columnar_layout.cpp  gpu_aggregator.cu  multi_gpu_aggregator.cu  query_api.cpp  rest_api.cpp  simd_query_engine.cpp
